# ultramsatric

./: .gitignore  pyproject.toml  requirements.txt  setup.py
conda.recipe/: meta.yml
scripts/: default.scores  diversealn.sh  make-nonref.sh  mostdiverse.sh  msa-default.scores  msa_call.sh  msa_mutatedcall.sh  msa_submit.sh  msacall.sh  msasubmit.sh  msatofasta.py  mutate_scores.py  pam.tsv  regressive_call.sh  scoredist_pam.scores  submit.sh  submit_regressive.sh
tests/: distance.py
ultramsatric/: __init__.py  alignment.py  distance.py  main.py  msa.py  substitutions.py  ultrametric.py
