[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ultramsatric"
authors = [
    {name = "Leon Rauschning"},
]
description = "A tool for MSA evaluation, based on computing the distance to an ultrametric phylogeny"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["MSA", "Bioinformatics"]
license = {text = "MIT"}
dependencies = [ "numpy", 
]
dynamic = ["version"]


[project.scripts]
ultramsatric = "ultramsatric:main.main"
